# cognic-agentos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/workflows/: dep-upgrade.yml  python.yml  z3-canonical-docker-audit.yml
docs/: A2A-CALLER-URL-THREAT-MODEL.md  A2A-CONFORMANCE.md  AS_BUILT_CAPABILITY_MAP.md  BUILD_PLAN.md  HOW-TO-WRITE-A-PACK.md  INFERENCE-BACKENDS.md  MCP-CONFORMANCE.md  MCP-STDIO-THREAT-MODEL.md  PACK-MANIFEST-SPEC.md  PRODUCTION_GRADE_MILESTONE_CHECKLIST.md  PROJECT_PLAN.md  PROJECT_STATUS.md  ROADMAP.md  SDK-REFERENCE.md  SPRINT_WORKING_SUMMARY.md  VALIDATION-RESULTS.md
docs/adrs/: ADR-001-os-only-platform.md  ADR-002-mcp-plugin-protocol.md  ADR-003-a2a-inter-agent.md  ADR-004-sandbox-primitive.md  ADR-005-subagent-primitive.md  ADR-006-iso42001-control-mapping.md  ADR-007-provider-honesty.md  ADR-008-authoring-platform.md  ADR-009-pluggable-infrastructure-adapters.md  ADR-010-evaluation-harness.md  ADR-011-adversarial-testing.md  ADR-012-bank-pack-lifecycle.md  ADR-013-model-lifecycle.md  ADR-014-runtime-tool-approval.md  ADR-015-policy-as-code.md  ADR-016-supply-chain-controls.md  ADR-017-data-governance-contracts.md  ADR-018-emergency-controls.md  ADR-019-agent-memory-governance.md  ADR-020-ui-event-stream-contract.md  ADR-022-runtime-scheduler.md  ADR-023-per-tenant-config-overlay.md  ADR-024-deployment-substrate-helm-packaging.md  ADR-026-operator-pack-install-runtime-config.md
docs/closeouts/: 2026-04-28-phase-1-foundation.md  2026-04-29-sprint-2-governance-foundation.md  2026-04-29-sprint-2.5-operational-primitives.md  2026-04-30-sprint-3-llm-gateway-and-provider-honesty.md  2026-05-01-sprint-4-plugin-registry-trust-gate.md  2026-05-03-sprint-5-mcp-host.md  2026-05-06-sprint-6-a2a-endpoint.md  2026-05-09-sprint-7a-agentos-sdk-cli.md  2026-05-10-sprint-7a2-hook-packs-runtime.md  2026-05-11-sprint-7b1-lifecycle-state-machine.md  2026-05-13-sprint-7b2-portal-api-rbac-owasp.md  2026-05-15-sprint-7b3-reviewer-evidence-panels-5-gate.md  2026-05-16-sprint-7b4-ui-event-stream-endpoints.md  2026-05-17-sprint-8a-sandbox-primitive.md  2026-05-18-sprint-8b-kubernetes-pod-backend.md  2026-05-20-sprint-8.5-resumable-session-api.md  2026-05-27-sprint-10.5-scheduler-primitive.md  2026-05-30-sprint-10.6-workload-credential-projection.md  (+8 more)
examples/cognic-agent-example-minimal/: README.md  cognic-pack-manifest.toml  pyproject.toml
examples/cognic-agent-example-minimal/agent_cards/: agent-card.json
examples/cognic-agent-example-minimal/attestations/test-signing/: NOTE.md  test_signing_key.private.pem  test_signing_key.public.pem
examples/cognic-agent-example-minimal/src/cognic_agent_example_minimal/: __init__.py  agent.py
examples/cognic-hook-example-minimal/: README.md  cognic-pack-manifest.toml  pyproject.toml
examples/cognic-hook-example-minimal/src/cognic_hook_example_minimal/: __init__.py  hook.py
examples/cognic-skill-example-minimal/: README.md  cognic-pack-manifest.toml  pyproject.toml
examples/cognic-skill-example-minimal/src/cognic_skill_example_minimal/: __init__.py  skill.py
examples/cognic-tool-example-minimal/: README.md  cognic-pack-manifest.toml  pyproject.toml
examples/cognic-tool-example-minimal/src/cognic_tool_example_minimal/: __init__.py  tool.py
examples/cognic-tool-search/: README.md  cognic-pack-manifest.toml  pyproject.toml
examples/cognic-tool-search/src/cognic_tool_search/: __init__.py  corpus_loader.py  server.py
examples/cognic-tool-search/src/cognic_tool_search/corpus/: policy_docs.json
examples/cognic-tool-search/tests/: test_server_env.py
src/cognic_agentos/cli/templates/skill/: README.md  cognic-pack-manifest.toml  pyproject.toml
src/cognic_agentos/cli/templates/skill/.github/workflows/: sign-and-publish.yml
src/cognic_agentos/cli/templates/skill/src/__module__/: skill.py
src/cognic_agentos/cli/templates/skill/tests/: test_skill.py
src/cognic_agentos/cli/templates/tool/: README.md  cognic-pack-manifest.toml  pyproject.toml
src/cognic_agentos/cli/templates/tool/.github/workflows/: sign-and-publish.yml
src/cognic_agentos/cli/templates/tool/src/__module__/: __init__.py  server.py  tool.py
src/cognic_agentos/cli/templates/tool/tests/: conftest.py  test_tool.py
tests/: conftest.py
tests/fixtures/cli_harness_target_pack/: cognic-pack-manifest.toml  pyproject.toml
tests/fixtures/cli_harness_target_pack/src/cognic_tool_harness_target/: __init__.py  tool.py
tests/fixtures/cli_sign_target_pack/: cognic-pack-manifest.toml  pyproject.toml
tests/fixtures/cli_sign_target_pack/agent_cards/: agent-card.json
tests/fixtures/cli_sign_target_pack/attestations/test-signing/: NOTE.md  test_signing_key.private.pem  test_signing_key.public.pem
tests/fixtures/cli_sign_target_pack/src/cognic_agent_sign_target/: __init__.py  agent.py
tests/fixtures/cognic_test_agent_pack/: pyproject.toml
tests/fixtures/cognic_test_agent_pack/attestations/: bundle.sigstore  cosign.sig  intoto-layout.json  license-audit.json  sbom.cdx.json  slsa-provenance.intoto.json  vuln-scan.json
tests/fixtures/cognic_test_agent_pack/cognic_test_agent_pack/: __init__.py  cognic-pack-manifest.toml
tests/fixtures/cognic_test_agent_pack/cognic_test_agent_pack/agent_cards/: NOTE.md  test_agent.json  test_agent.jws  test_agent.pub.pem
tests/fixtures/cognic_test_mcp_pack/: pyproject.toml
tests/fixtures/cognic_test_mcp_pack/attestations/: bundle.sigstore  cosign.sig  intoto-layout.json  license-audit.json  sbom.cdx.json  slsa-provenance.intoto.json  vuln-scan.json
tests/fixtures/cognic_test_mcp_pack/cognic_test_mcp_pack/: __init__.py  cognic-pack-manifest.toml
tests/fixtures/cognic_test_pack/: pyproject.toml
tests/fixtures/cognic_test_pack/attestations/: bundle.sigstore  cosign.sig  intoto-layout.json  license-audit.json  sbom.cdx.json  slsa-provenance.intoto.json  vuln-scan.json
tests/fixtures/cognic_test_pack/cognic_test_pack/: __init__.py  tool.py
tools/: check_critical_coverage.py  generate_conformance_matrix_json.py
(+1291 files in other folders)
