[project]
name = "cognic-agentos"
version = "0.0.1"
description = "Cognic AgentOS — bank-grade governance kernel + runtime + protocol layer for agent plugin packs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Cognic" }]
keywords = ["agentos", "agents", "mcp", "a2a", "governance", "iso-42001"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "httpx>=0.28",
    # Settings
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "pyyaml>=6.0.2",
    # Observability (Sprint 1B)
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49",
    "opentelemetry-exporter-otlp>=1.28",
    "prometheus-client>=0.25",  # spec floor was >=0.26; lowered to PyPI reality (0.26 not yet released)
    "prometheus-fastapi-instrumentator>=7.1",
    "python-json-logger>=3.2",
    # Persistence + governance (Sprint 2 — promoted from [adapters] to base
    # because core/audit, core/decision_history, core/chain_verifier, and
    # db/engine all import sqlalchemy directly. The kernel image must be
    # able to import these governance modules even without --extra adapters.
    # Driver-specific deps (asyncpg, oracledb, qdrant-client, hvac, langfuse)
    # stay in [project.optional-dependencies].adapters.
    "sqlalchemy[asyncio]>=2.0",   # carryover floor from Sprint 1C (was promoted unchanged)
    "alembic>=1.16",              # carryover floor from Sprint 1C (was promoted unchanged)
    "greenlet>=3.0",              # SQLAlchemy[asyncio] dep; explicit floor
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]
adapters = [
    # Persistence (Sprint 1C, per ADR-009). sqlalchemy + alembic moved
    # to base [project] deps in Sprint 2 (core/audit imports them) —
    # the [adapters] extra now carries only driver-specific packages
    # that the kernel image must NOT ship.
    "asyncpg>=0.31",
    "pgvector>=0.4",
    "qdrant-client>=1.17",        # spec floor was >=1.18; lowered to PyPI reality (1.18 not yet released — latest stable 1.17.1). Bump back when 1.18 ships.
    "redis>=5.3",
    # Secrets (Sprint 1C, per ADR-009)
    "hvac>=2.4",
    "cryptography>=45",
    # Observability adapter (Sprint 1C, per ADR-009)
    "langfuse>=3.0",
    # Enterprise relational (Sprint 1D, per ADR-009)
    "oracledb>=2.5",
]

[project.urls]
Homepage = "https://cognic.ai"
Documentation = "https://github.com/bmzee/cognic-agentos/blob/main/docs/PROJECT_PLAN.md"
Source = "https://github.com/bmzee/cognic-agentos"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_agentos"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "oracle: tests requiring the live Oracle XE compose overlay (env-gated via COGNIC_RUN_ORACLE_INTEGRATION=1)",
    "postgres: tests requiring the live Postgres compose service (env-gated via COGNIC_RUN_POSTGRES_INTEGRATION=1)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Adapter third-party libs that don't ship type stubs (Sprint 1C).
# Adding ``types-hvac`` etc. to dev deps is the alternative; ignoring
# missing imports keeps the dep set lean since hvac's own surface is
# small and exercised end-to-end by adapter tests.
[[tool.mypy.overrides]]
module = ["hvac.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/cognic_agentos"]
branch = true
