[project]
name = "cognic-agentos"
version = "0.0.1"
description = "Cognic AgentOS — bank-grade governance kernel + runtime + protocol layer for agent plugin packs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Cognic" }]
keywords = ["agentos", "agents", "mcp", "a2a", "governance", "iso-42001"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "httpx>=0.28",
    # Settings
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "pyyaml>=6.0.2",
    # Observability (Sprint 1B)
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49",
    "opentelemetry-exporter-otlp>=1.28",
    "prometheus-client>=0.25", # spec floor was >=0.26; lowered to PyPI reality (0.26 not yet released)
    "prometheus-fastapi-instrumentator>=7.1",
    "python-json-logger>=3.2",
    # Persistence + governance (Sprint 2 — promoted from [adapters] to base
    # because core/audit, core/decision_history, core/chain_verifier, and
    # db/engine all import sqlalchemy directly. The kernel image must be
    # able to import these governance modules even without --extra adapters.
    # Driver-specific deps (asyncpg, oracledb, qdrant-client, hvac, langfuse)
    # stay in [project.optional-dependencies].adapters.
    "sqlalchemy[asyncio]>=2.0", # carryover floor from Sprint 1C (was promoted unchanged)
    "alembic>=1.16", # carryover floor from Sprint 1C (was promoted unchanged)
    "greenlet>=3.0", # SQLAlchemy[asyncio] dep; explicit floor
    "python-ulid>=3.1.0",
    # Sprint-7A T2 — agentos_sdk.Tool template-method validates input/output
    # against ``input_schema`` / ``output_schema`` (declared per pack subclass);
    # jsonschema is the validation engine. Already a transitive via fastapi,
    # but pinning here so the SDK's public contract is explicit.
    "jsonschema>=4.26",
    # Sprint-7A T4 — `agentos` / `agentos-cli` console scripts (registered
    # under [project.scripts] below) are mandatory pack-author surface per
    # ADR-008 Phase A. R1 P2 #1 reviewer correction: putting Typer / Jinja2
    # under [project.optional-dependencies].sdk would leave a `pip install
    # -e .` install with the script entry point wired but the imports
    # unresolvable — first invocation of `agentos --help` would raise
    # ModuleNotFoundError before Typer's help-renderer ran. The CLI is
    # part of the AgentOS public surface; its dependencies are part of
    # the base install. Jinja2 lands here at T4 because cli/__init__.py
    # imports the templates package at T5; pinning at T4 keeps the
    # pyproject churn to a single sprint.
    #
    # Plan deviation: the plan-of-record specified ``typer>=0.12,<0.13``,
    # but Typer 0.12.x resolves against ``Parameter.make_metavar()`` from
    # click <8.2 — click 8.3 (current resolution) made ``ctx`` mandatory,
    # which trips a TypeError on every ``--help`` invocation under
    # 0.12.x. Bumped to the tested-compatible range ``>=0.25,<0.26``
    # (R16 P3 #1 reviewer correction — earlier draft used ``>=0.15``
    # with no upper bound, which leaves a fresh install outside the
    # current uv.lock vulnerable to rediscovering the same class of
    # CLI-compat break the deviation was meant to close). Bump the
    # upper bound only after exercising the new minor against
    # ``tests/unit/cli/`` end-to-end. Flagged for plan-of-record
    # amendment at sprint closeout.
    "typer>=0.25,<0.26",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    # Sprint-7A T2 — agentos_sdk.Tool template-method validates input/output
    # via jsonschema; mypy strict mode needs the type stubs.
    "types-jsonschema>=4.26",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]
adapters = [
    # Persistence (Sprint 1C, per ADR-009). sqlalchemy + alembic moved
    # to base [project] deps in Sprint 2 (core/audit imports them) —
    # the [adapters] extra now carries only driver-specific packages
    # that the kernel image must NOT ship.
    "asyncpg>=0.31",
    "pgvector>=0.4",
    "qdrant-client>=1.17",        # spec floor was >=1.18; lowered to PyPI reality (1.18 not yet released — latest stable 1.17.1). Bump back when 1.18 ships.
    "redis>=5.3",
    # Secrets (Sprint 1C, per ADR-009)
    "hvac>=2.4",
    "cryptography>=45",
    # Observability adapter (Sprint 1C, per ADR-009)
    "langfuse>=3.0",
    # Enterprise relational (Sprint 1D, per ADR-009)
    "oracledb>=2.5",
    # MCP host (Sprint 5, per ADR-002). The official Anthropic / MCP-WG
    # SDK provides Streamable HTTP client wiring + MCP-spec wire format
    # for protocol/mcp_host.MCPHost + protocol/mcp_transports.
    # StreamableHTTPTransport. Per Sprint-5 R3 P1 doctrine, the
    # admission-side modules (mcp_authz / mcp_capabilities / mcp_manifest)
    # do NOT depend on this SDK; only MCPHost + StreamableHTTPTransport
    # call require_mcp() at construction. Pinned exactly (no ^/~ ranges)
    # because version drift is a registration-time contract change.
    "mcp == 1.27.0",
    # A2A endpoint (Sprint 6, per ADR-003 + docs/A2A-CONFORMANCE.md).
    # Official Linux-Foundation-governed Python SDK. Provides the
    # spec-canonical Pydantic types (generated from protobuf) for two
    # disjoint module classes:
    #   (a) SDK-consuming runtime modules — module-level + construction-
    #       level SDK use; gated by require_a2a() at construction.
    #       protocol/a2a_endpoint (T9 task lifecycle),
    #       protocol/a2a_streaming (T10 streaming envelopes),
    #       protocol/a2a_artifacts (T11 artifact references).
    #   (b) Lazy schema re-export module — TYPE_CHECKING-only imports
    #       at module level + lazy SDK access via _types() function;
    #       the module itself imports cleanly without the SDK installed.
    #       protocol/a2a_schema (T6 stable re-exports + drift digests).
    # Admission-side modules (a2a_authz, a2a_agent_cards, a2a_version,
    # a2a_errors, a2a_capability_negotiation, a2a_cancellation) are
    # SDK-FREE per Sprint-6 R3 P1 + Sprint-6 T2 R2 P2 #1 doctrine —
    # a2a_version is a pure-functional 6-case A2A-Version header parser
    # with no SDK dependency; a2a_errors owns the spec-code Literal
    # vocabulary (string-typed wire codes, not SDK types); the T11
    # small modules consume only that Literal vocabulary + pack-manifest
    # data. Future maintainers must NOT move a2a_schema into the
    # runtime-side optional-deps map — its import path is genuinely
    # SDK-free and the lazy boundary is what keeps it admission-safe.
    # Import namespace is `a2a` (NOT `a2a_sdk`, NOT `a2a_protocol` —
    # the latter is an unrelated 0.1.0 PyPI package). Pinned exactly:
    # version drift is a wire-protocol contract change tied to the
    # schema-drift CI gate (T6).
    "a2a-sdk == 1.0.2",
    # JWS verification for A2A Agent Card detached signatures (Sprint 6
    # T7, per A2A-CONFORMANCE.md §"Card signatures (JWS)"). joserfc was
    # picked (over python-jose, which is abandoned + lacks RFC-7797
    # support, and over jwcrypto, which is older + uses a different
    # crypto family) because (a) explicit RFC-7797 detached-JWS API
    # surface; (b) actively maintained by the authlib author; (c)
    # transitively reuses cryptography>=45 (already pinned for cosign).
    "joserfc == 1.6.4",
]

[project.scripts]
# Sprint-7A T4 — pack-author console scripts. Both names point at the
# same Typer app; ``agentos`` is the friendly form for human use,
# ``agentos-cli`` is the long-form alias that survives in environments
# that already have an ``agentos`` binary (rare, but cheap insurance).
agentos = "cognic_agentos.cli:app"
agentos-cli = "cognic_agentos.cli:app"

[project.urls]
Homepage = "https://cognic.ai"
Documentation = "https://github.com/bmzee/cognic-agentos/blob/main/docs/PROJECT_PLAN.md"
Source = "https://github.com/bmzee/cognic-agentos"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_agentos"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    "types-jsonschema>=4.26",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "oracle: tests requiring the live Oracle XE compose overlay (env-gated via COGNIC_RUN_ORACLE_INTEGRATION=1)",
    "postgres: tests requiring the live Postgres compose service (env-gated via COGNIC_RUN_POSTGRES_INTEGRATION=1)",
    "a2a_upstream: env-gated upstream A2A schema-drift gate (Sprint-6 T6, env-gated via COGNIC_RUN_A2A_UPSTREAM=1; CI runs on the a2a-spec-drift lane)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Adapter third-party libs that don't ship type stubs (Sprint 1C).
# Adding ``types-hvac`` etc. to dev deps is the alternative; ignoring
# missing imports keeps the dep set lean since hvac's own surface is
# small and exercised end-to-end by adapter tests.
[[tool.mypy.overrides]]
module = ["hvac.*"]
ignore_missing_imports = true

# Sprint-6 T7 — google.protobuf ships no stubs in the dependency
# tree we lock against (types-protobuf would need to be added to
# dev-deps). The protobuf surface a2a_agent_cards uses is narrow
# (json_format.Parse + DecodeError), and the strict-typing surface
# we DO control treats the parsed AgentCard as the typed re-export
# from cognic_agentos.protocol.a2a_schema. Ignoring missing imports
# at the boundary keeps the strict-typing posture for our own code.
[[tool.mypy.overrides]]
module = ["google.protobuf.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/cognic_agentos"]
branch = true
omit = [
    # Alembic env.py is invoked via the ``alembic`` CLI subprocess
    # (PostgresAdapter.run_migrations / OracleAdapter.run_migrations
    # both shell out via asyncio.to_thread + alembic.command.upgrade).
    # It is exercised end-to-end by tests/integration/db/
    # test_alembic_migrations.py + the unit-level run_migrations tests
    # in tests/unit/db/test_run_migrations.py — but those run alembic
    # in a way coverage.py cannot trace back to the env.py module.
    # Excluding it from rollup so the ≥93% global target reflects
    # code that is genuinely unit-testable without subprocess tricks.
    "src/cognic_agentos/db/migrations/env.py",
]
