[project]
name = "cognic-agentos"
version = "0.0.1"
description = "Cognic AgentOS — bank-grade governance kernel + runtime + protocol layer for agent plugin packs"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Cognic" }]
keywords = ["agentos", "agents", "mcp", "a2a", "governance", "iso-42001"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Web
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "httpx>=0.28",
    # Settings
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "pyyaml>=6.0.2",
    # Observability (Sprint 1B)
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49",
    "opentelemetry-exporter-otlp>=1.28",
    "prometheus-client>=0.25", # spec floor was >=0.26; lowered to PyPI reality (0.26 not yet released)
    "prometheus-fastapi-instrumentator>=7.1",
    "python-json-logger>=3.2",
    # Persistence + governance (Sprint 2 — promoted from [adapters] to base
    # because core/audit, core/decision_history, core/chain_verifier, and
    # db/engine all import sqlalchemy directly. The kernel image must be
    # able to import these governance modules even without --extra adapters.
    # Driver-specific deps (asyncpg, oracledb, qdrant-client, hvac, langfuse)
    # stay in [project.optional-dependencies].adapters.
    "sqlalchemy[asyncio]>=2.0", # carryover floor from Sprint 1C (was promoted unchanged)
    "alembic>=1.16", # carryover floor from Sprint 1C (was promoted unchanged)
    "greenlet>=3.0", # SQLAlchemy[asyncio] dep; explicit floor
    "python-ulid>=3.1.0",
    # Sprint-7A T2 — agentos_sdk.Tool template-method validates input/output
    # against ``input_schema`` / ``output_schema`` (declared per pack subclass);
    # jsonschema is the validation engine. Already a transitive via fastapi,
    # but pinning here so the SDK's public contract is explicit.
    "jsonschema>=4.26",
    # Sprint-7A T4 — `agentos` / `agentos-cli` console scripts (registered
    # under [project.scripts] below) are mandatory pack-author surface per
    # ADR-008 Phase A. R1 P2 #1 reviewer correction: putting Typer / Jinja2
    # under [project.optional-dependencies].sdk would leave a `pip install
    # -e .` install with the script entry point wired but the imports
    # unresolvable — first invocation of `agentos --help` would raise
    # ModuleNotFoundError before Typer's help-renderer ran. The CLI is
    # part of the AgentOS public surface; its dependencies are part of
    # the base install. Jinja2 lands here at T4 because cli/__init__.py
    # imports the templates package at T5; pinning at T4 keeps the
    # pyproject churn to a single sprint.
    #
    # Plan deviation: the plan-of-record specified ``typer>=0.12,<0.13``,
    # but Typer 0.12.x resolves against ``Parameter.make_metavar()`` from
    # click <8.2 — click 8.3 (current resolution) made ``ctx`` mandatory,
    # which trips a TypeError on every ``--help`` invocation under
    # 0.12.x. Bumped to the tested-compatible range ``>=0.25,<0.26``
    # (R16 P3 #1 reviewer correction — earlier draft used ``>=0.15``
    # with no upper bound, which leaves a fresh install outside the
    # current uv.lock vulnerable to rediscovering the same class of
    # CLI-compat break the deviation was meant to close). Bump the
    # upper bound only after exercising the new minor against
    # ``tests/unit/cli/`` end-to-end. Flagged for plan-of-record
    # amendment at sprint closeout.
    "typer>=0.25,<0.26",
    "jinja2>=3.1,<4",
    # Sprint 7B.3 T2 Slice F — `agentos sign --bundle-root <path>`
    # writes the bundle-root-relative `[supply_chain].blob_path` back
    # into the author's `cognic-pack-manifest.toml` (R6 P2 #4 + R7 P2
    # #4). Python stdlib's `tomllib` is read-only (PEP 680); `tomli-w`
    # is the canonical small write-only counterpart (same author as
    # tomli/tomllib; stable; zero transitive deps). Required for the
    # signature gate's non-overridability per ADR-012 §110 — the gate
    # cannot be bypassed, so the manifest field MUST be wired
    # automatically by the authoring CLI rather than by manual author
    # edit. Plan deviation: original Slice F estimate was "~25 LoC"
    # without dep churn; expanded scope explicitly authorized at R10+.
    "tomli-w>=1.0,<2",
    # Sprint-7B.4 T3 — sse-starlette is the EventSourceResponse class that
    # implements the SSE wire protocol (heartbeat, retry-after, send_timeout,
    # ping-suppress sentinel) per ADR-020. It was a transitive dep until
    # 7B.4 promoted it to an EXPLICIT runtime dep because T10's stream_routes
    # imports it directly + every UI-stream production deployment depends on
    # its presence at import time. <3.0.0 caps the upper bound at a major
    # version boundary per the repo convention.
    "sse-starlette>=2.1.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    # Sprint-7A T2 — agentos_sdk.Tool template-method validates input/output
    # via jsonschema; mypy strict mode needs the type stubs.
    "types-jsonschema>=4.26",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]
adapters = [
    # Persistence (Sprint 1C, per ADR-009). sqlalchemy + alembic moved
    # to base [project] deps in Sprint 2 (core/audit imports them) —
    # the [adapters] extra now carries only driver-specific packages
    # that the kernel image must NOT ship.
    "asyncpg>=0.31",
    "pgvector>=0.4",
    "qdrant-client>=1.17",        # spec floor was >=1.18; lowered to PyPI reality (1.18 not yet released — latest stable 1.17.1). Bump back when 1.18 ships.
    "redis>=5.3",
    # Secrets (Sprint 1C, per ADR-009)
    "hvac>=2.4",
    "cryptography>=45",
    # Observability adapter (Sprint 1C, per ADR-009)
    "langfuse>=3.0",
    # Enterprise relational (Sprint 1D, per ADR-009)
    "oracledb>=2.5",
    # MCP host (Sprint 5, per ADR-002). The official Anthropic / MCP-WG
    # SDK provides Streamable HTTP client wiring + MCP-spec wire format
    # for protocol/mcp_host.MCPHost + protocol/mcp_transports.
    # StreamableHTTPTransport. Per Sprint-5 R3 P1 doctrine, the
    # admission-side modules (mcp_authz / mcp_capabilities / mcp_manifest)
    # do NOT depend on this SDK; only MCPHost + StreamableHTTPTransport
    # call require_mcp() at construction. Pinned exactly (no ^/~ ranges)
    # because version drift is a registration-time contract change.
    "mcp == 1.27.0",
    # A2A endpoint (Sprint 6, per ADR-003 + docs/A2A-CONFORMANCE.md).
    # Official Linux-Foundation-governed Python SDK. Provides the
    # spec-canonical Pydantic types (generated from protobuf) for two
    # disjoint module classes:
    #   (a) SDK-consuming runtime modules — module-level + construction-
    #       level SDK use; gated by require_a2a() at construction.
    #       protocol/a2a_endpoint (T9 task lifecycle),
    #       protocol/a2a_streaming (T10 streaming envelopes),
    #       protocol/a2a_artifacts (T11 artifact references).
    #   (b) Lazy schema re-export module — TYPE_CHECKING-only imports
    #       at module level + lazy SDK access via _types() function;
    #       the module itself imports cleanly without the SDK installed.
    #       protocol/a2a_schema (T6 stable re-exports + drift digests).
    # Admission-side modules (a2a_authz, a2a_agent_cards, a2a_version,
    # a2a_errors, a2a_capability_negotiation, a2a_cancellation) are
    # SDK-FREE per Sprint-6 R3 P1 + Sprint-6 T2 R2 P2 #1 doctrine —
    # a2a_version is a pure-functional 6-case A2A-Version header parser
    # with no SDK dependency; a2a_errors owns the spec-code Literal
    # vocabulary (string-typed wire codes, not SDK types); the T11
    # small modules consume only that Literal vocabulary + pack-manifest
    # data. Future maintainers must NOT move a2a_schema into the
    # runtime-side optional-deps map — its import path is genuinely
    # SDK-free and the lazy boundary is what keeps it admission-safe.
    # Import namespace is `a2a` (NOT `a2a_sdk`, NOT `a2a_protocol` —
    # the latter is an unrelated 0.1.0 PyPI package). Pinned exactly:
    # version drift is a wire-protocol contract change tied to the
    # schema-drift CI gate (T6).
    "a2a-sdk == 1.0.2",
    # JWS verification for A2A Agent Card detached signatures (Sprint 6
    # T7, per A2A-CONFORMANCE.md §"Card signatures (JWS)"). joserfc was
    # picked (over python-jose, which is abandoned + lacks RFC-7797
    # support, and over jwcrypto, which is older + uses a different
    # crypto family) because (a) explicit RFC-7797 detached-JWS API
    # surface; (b) actively maintained by the authlib author; (c)
    # transitively reuses cryptography>=45 (already pinned for cosign).
    "joserfc == 1.6.4",
]
sandbox-docker = [
    # Sprint 8A T10 — DockerSiblingSandboxBackend uses aiodocker as the
    # async Docker daemon client. NOT in [project] base deps so a
    # KubernetesPod-only deployment (Sprint 8B, the production target
    # per AGENTS.md) does not pull a docker-py-stack dependency it does
    # not use. The DockerSibling backend module imports aiodocker at
    # module level — installs without this extra do NOT import the
    # backend module (the sandbox package re-export is wrapped behind
    # a try/except ImportError that surfaces a structured
    # NotImplementedError pointing at this extra when missing).
    # aiodocker has no upper bound pin because the API surface
    # (Docker / containers / networks / show / exec / kill) is stable;
    # bump if a future version breaks the contract.
    "aiodocker>=0.24",
]
sandbox-k8s = [
    # Sprint 8B T8B-b — KubernetesPodSandboxBackend uses
    # kubernetes-asyncio as the async Kubernetes API client (the most
    # mature async option; default per the 2026-05-17 preflight
    # decision). NOT in [project] base deps so a DockerSibling-only
    # deployment (Sprint 8A; dev/CI) does not pull the
    # kubernetes-asyncio + websockets + aiohttp stack it does not use.
    # The KubernetesPod backend module imports kubernetes_asyncio at
    # module level — installs without this extra do NOT import the
    # backend module (the sandbox package re-export is wrapped behind
    # a try/except ImportError that surfaces a structured
    # NotImplementedError pointing at this extra when missing,
    # mirroring the sandbox-docker pattern above).
    # Min-version pinned at T8B-b step 1 (2026-05-17): 35.0.1 is the
    # current PyPI stable. API surface verified at session compose time
    # per feedback_verify_dep_availability_at_implementation:
    #   * CoreV1Api.create_namespaced_pod(namespace, body, **kwargs)
    #   * CoreV1Api.delete_namespaced_pod(name, namespace, **kwargs)
    #   * CoreV1Api.read_namespaced_pod_status(name, namespace, **kwargs)
    #   * CoreV1Api.list_namespaced_pod(namespace, **kwargs)
    #   * NetworkingV1Api.create_namespaced_network_policy(namespace, body, **kwargs)
    #   * NetworkingV1Api.delete_namespaced_network_policy(name, namespace, **kwargs)
    #   * CoreV1Api.connect_get_namespaced_pod_exec(name, namespace, **kwargs)
    #   * kubernetes_asyncio.stream.WsApiClient subclasses ApiClient
    # The lower bound is permissive (>=35) because the synchronous
    # client (the upstream kubernetes-client repo) tracks a different
    # version line; bump if a future kubernetes-asyncio release breaks
    # any of the verified surfaces above.
    "kubernetes-asyncio>=35.0.1",
]

[project.scripts]
# Sprint-7A T4 — pack-author console scripts. Both names point at the
# same Typer app; ``agentos`` is the friendly form for human use,
# ``agentos-cli`` is the long-form alias that survives in environments
# that already have an ``agentos`` binary (rare, but cheap insurance).
agentos = "cognic_agentos.cli:app"
agentos-cli = "cognic_agentos.cli:app"

[project.urls]
Homepage = "https://cognic.ai"
Documentation = "https://github.com/bmzee/cognic-agentos/blob/main/docs/PROJECT_PLAN.md"
Source = "https://github.com/bmzee/cognic-agentos"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_agentos"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.1",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML",
    "types-jsonschema>=4.26",
    # Sprint 1C — test infra for adapter unit tests
    "aiosqlite>=0.20",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring external services",
    "oracle: tests requiring the live Oracle XE compose overlay (env-gated via COGNIC_RUN_ORACLE_INTEGRATION=1)",
    "postgres: tests requiring the live Postgres compose service (env-gated via COGNIC_RUN_POSTGRES_INTEGRATION=1)",
    "a2a_upstream: env-gated upstream A2A schema-drift gate (Sprint-6 T6, env-gated via COGNIC_RUN_A2A_UPSTREAM=1; CI runs on the a2a-spec-drift lane)",
    "require_both_backends: Sprint-8.5 T9 cross-backend conformance — once BOTH COGNIC_RUN_DOCKER_SANDBOX=1 and COGNIC_RUN_K8S_SANDBOX=1 are set, a per-backend runtime that is unavailable FAILS the run instead of skipping (a one-backend skip alongside a passing sibling would be a false-green for a parity gate)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

# Sprint-7A T5 — `cli/templates/` carries Jinja2 source files (with
# extensions like ``.py``, ``.toml``, ``.yml``, ``.md``) that contain
# ``{{ ... }}`` placeholders the scaffolder substitutes at write time.
# These files are NOT valid Python / TOML / YAML on their own; ruff +
# tomllib + yaml parsers all choke on the unresolved Jinja syntax. The
# scaffold tests exercise the rendered output (which IS valid); the
# templates themselves are render-time-only artifacts.
extend-exclude = ["src/cognic_agentos/cli/templates/**"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
# Sprint-7A T5 — exclude the Jinja2 template tree (see the matching
# ruff extend-exclude block). Templates are render-time artifacts,
# not importable Python.
#
# Sprint-7A T13 — exclude the harness's task-local fixture pack at
# tests/fixtures/cli_harness_target_pack/. The fixture is loaded by
# `cli/test_harness.py` via `importlib.util.spec_from_file_location`
# at runtime — it is NOT pip-installed, so mypy cannot resolve the
# intra-package import in `cognic_tool_harness_target/__init__.py`
# (`from cognic_tool_harness_target.tool import HarnessTargetTool`).
# Excluding the fixture mirrors how pack repos are out-of-tree for
# mypy in production: pack code lives in pack repos, the OS only
# loads it at runtime via the entry-point group.
exclude = [
    "^src/cognic_agentos/cli/templates/",
    "^tests/fixtures/cli_harness_target_pack/",
    # Sprint-7A T14 — same rationale as T13: the cli_sign_target_pack
    # fixture is loaded by test code at runtime (sign + verify
    # orchestrators read its tree directly via the filesystem, NOT via
    # pip-install). The intra-package import in
    # ``cognic_agent_sign_target/__init__.py`` is unresolvable to mypy
    # without the package being installed.
    "^tests/fixtures/cli_sign_target_pack/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Adapter third-party libs that don't ship type stubs (Sprint 1C).
# Adding ``types-hvac`` etc. to dev deps is the alternative; ignoring
# missing imports keeps the dep set lean since hvac's own surface is
# small and exercised end-to-end by adapter tests.
[[tool.mypy.overrides]]
module = ["hvac.*"]
ignore_missing_imports = true

# Sprint-6 T7 — google.protobuf ships no stubs in the dependency
# tree we lock against (types-protobuf would need to be added to
# dev-deps). The protobuf surface a2a_agent_cards uses is narrow
# (json_format.Parse + DecodeError), and the strict-typing surface
# we DO control treats the parsed AgentCard as the typed re-export
# from cognic_agentos.protocol.a2a_schema. Ignoring missing imports
# at the boundary keeps the strict-typing posture for our own code.
[[tool.mypy.overrides]]
module = ["google.protobuf.*"]
ignore_missing_imports = true

# Proof 1a — the cognic-tool-search example pack (examples/cognic-tool-search/)
# is an EXTERNAL pack installed editable only locally (`uv pip install -e
# examples/cognic-tool-search`); CI does not install it, so the pack_loop
# integration tests' lazy `from cognic_tool_search... import ...` lines (inside
# functions/fixtures, all gated by `skipif(find_spec("cognic_tool_search") is
# None)` / the COGNIC_RUN_PACK_LOOP_PROOF env gate at runtime) resolve to a
# missing module under mypy in CI. The tests SKIP cleanly there; mypy
# static-checks the imports regardless, so tolerate the missing module — same
# pattern as hvac.* / google.protobuf.* above. Locally the pack is installed +
# ships py.typed, so mypy type-checks it normally.
[[tool.mypy.overrides]]
module = ["cognic_tool_search.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/cognic_agentos"]
branch = true
omit = [
    # Alembic env.py is invoked via the ``alembic`` CLI subprocess
    # (PostgresAdapter.run_migrations / OracleAdapter.run_migrations
    # both shell out via asyncio.to_thread + alembic.command.upgrade).
    # It is exercised end-to-end by tests/integration/db/
    # test_alembic_migrations.py + the unit-level run_migrations tests
    # in tests/unit/db/test_run_migrations.py — but those run alembic
    # in a way coverage.py cannot trace back to the env.py module.
    # Excluding it from rollup so the ≥93% global target reflects
    # code that is genuinely unit-testable without subprocess tricks.
    "src/cognic_agentos/db/migrations/env.py",
]
