# Sprint-7A T15 reference pack — minimal-but-valid AGENT pack pyproject.

[project]
name = "cognic-agent-example-minimal"
version = "0.1.0"
description = "Sprint-7A T15 reference agent pack — exercises the per-kind Wave-1 author lifecycle."
requires-python = ">=3.12"
dependencies = ["cognic-agentos"]

[project.entry-points."cognic.agents"]
example_minimal = "cognic_agent_example_minimal.agent:ExampleMinimalAgent"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_agent_example_minimal"]
