# Sprint-7A2 T11 reference pack — minimal-but-valid HOOK pack pyproject.

[project]
name = "cognic-hook-example-minimal"
version = "0.1.0"
description = "Sprint-7A2 T11 reference hook pack — exercises the per-kind Wave-1 author lifecycle."
requires-python = ">=3.12"
dependencies = ["cognic-agentos"]

[project.entry-points."cognic.hooks"]
example_minimal = "cognic_hook_example_minimal.hook:ExampleMinimalHook"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_hook_example_minimal"]
